--- a/index.html
+++ b/index.html
@@ -53,10 +53,11 @@
                     <div class="right flex-1">
                         <h6>Ajay</h6>
                         <h1>I’m a Graphic <span>Designer</span></h1>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit sed do eiusmod tempor incididunt ut
-                            labore et dolore magna aliqua. Ut enim ad minim veniam quis nostrud exercitation ullamco
-                            laboris
-                            nisi ut aliquip ex ea commodo consequat</p>
+                        <p> To work with an organization were, I can continuously upgrade my 
+      knowledge & skills at the same time sever the organization with the 
+      best of my sincerity and determination and where every achievement 
+      is regarded by increase in responsibility. 
+</p>
                         <div>
                             <button class="btn btn-secondary">DOWNLOAD CV</button>
                         </div>
