--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
                         <h6>Ajay</h6>
                         <h1>I’m a Graphic <span>Designer</span></h1>
                         <p> To work with an organization were, I can continuously upgrade my 
-      knowledge & skills at the same time sever the organization with the 
-      best of my sincerity and determination and where every achievement 
-      is regarded by increase in responsibility. 
-</p>
+                            knowledge & skills at the same time sever the organization with the 
+                            best of my sincerity and determination and where every achievement 
+                            is regarded by increase in responsibility. </p>
+ 
                         <div>
                             <button class="btn btn-secondary">DOWNLOAD CV</button>
                         </div>
