--- a/index.html
+++ b/index.html
@@ -74,14 +74,10 @@
                 <div class="flex-1 right">
                     <h1>About <span>Me</span></h1>
                     <h3>Hello! i’m Ajay.</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit sed do eiusmod tempor incididunt ut
-                        labore et
-                        dolore magna aliqua. Ut enim ad minim veniam quis nostrud exercitation ullamco laboris nisi ut
-                        aliquip ex ea commodo consequat. Lorem ipsum dolor sit amet consectetur adipisicing elit sed do
-                        eiusmod tempor incididunt ut labore et dolore magna aliqua.
-
-                        Ut enim ad minim veniam quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                        consequat</p>
+                    <p>To work with an organization were, I can continuously upgrade my 
+                            knowledge & skills at the same time sever the organization with the 
+                            best of my sincerity and determination and where every achievement 
+                            is regarded by increase in responsibility.</p>
                     <div class="social">
                         <a href="#"><img src="whatsapp.png"></a>
                         <a href="#"></a>
